--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" type="sylesheet">
-    <title>GitHub Project</title>
+    <title>GitHub Project: Git Understanding</title>
 </head>
 <body>
     
